# portal-media

./: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/: ADDING_THEMES.md  CLOUD_LIBRARY_SYNC.md  PLUGINS.md
e2e/: screenshots.spec.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: Cargo-example-temp.toml  print_game_enum_json.rs
src-tauri/icons/: icon.icns
src-tauri/src/: adblock.rs  browser.rs  browser_titlebar.js  commands.rs  game_scanner.rs  icon_extractor.rs  lib.rs  library_cache.rs  library_store.rs  main.rs  platform_sync.rs  streaming_addon.rs
src-tauri/src/metadata/: cache.rs  commands.rs  igdb.rs  mod.rs  secrets.rs  tmdb.rs
src/components/: BookmarkManager.tsx  BrowserBar.tsx  BrowserEdgeEscapeStrip.tsx  BrowserMinimized.tsx  BrowserTabs.tsx  BrowserView.tsx  CategoryFilter.tsx  ExitModal.tsx  FavoritesFilter.tsx  GameCard.tsx  GameCardContextMenu.tsx  GameDetailsContent.tsx  GameDetailsSidebar.tsx  GameGrid.tsx  GameInfoPanel.tsx  LibraryManualAddSection.tsx  Navigation.tsx  PS5CardWrapper.tsx  PS5FocusRing.tsx  PS5SmoothScroll.tsx  PlatformLabel.tsx  SearchBar.tsx  Settings.tsx  ShelfFocusRing.tsx  SitePermissions.tsx  SmoothScrollShelf.tsx  SortFilter.tsx  VideoControls.tsx
src/config/: contentGridPresets.ts  discoverFeeds.ts
src/constants/: categoryNav.ts
src/context/: ShellChromeContext.tsx
src/hooks/: useAppShellEvents.ts  useBrowserChromeReveal.ts  useBrowserNavigation.ts  (+11 more)
(+115 files in other folders)
